--- a/assignment2/COMP_596_Assignment_2_260804961.ipynb
+++ b/assignment2/COMP_596_Assignment_2_260804961.ipynb
@@ -62,7 +62,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d3b8f6c6-c1f5-4c62-d7b3-d509f7efea99"
+        "outputId": "1c844405-9192-426a-b355-9f5f2c568224"
       },
       "source": [
         "import re\n",
@@ -73,7 +73,7 @@
         "  if pattern.match(word):\n",
         "    print(word)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,29 +297,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8b3ddac-0232-4120-86c9-32b9a4e9d4d7"
+        "outputId": "52933eaa-0af2-48c8-d793-d27ec52e4d75"
       },
       "source": [
         "input_lines = ['<html class=\"client-nojs\" lang=\"en\" dir=\"ltr\">', '<table class=\"infobox biota\" style=\"text-align: left; width: 200px; font-size: 100%\">']\n",
         "\n",
-        "# write code\n",
         "tags = []\n",
         "keys_values = []\n",
         "for input_line in input_lines:\n",
-        "    tags.append(re.findall('<(\\w+) .*>', input_line))\n",
-        "    keys_values.append(re.findall(' (\\w+)=\"([^\"]+)\"', input_line))\n",
-        "\n",
+        "    objs = re.findall(r'(?:<(\\w+)| (\\w+)=\"([^\"]+)\")', input_line)\n",
+        "    \n",
+        "    for obj in objs:\n",
+        "        if obj[1] == '' and obj[2] == '':\n",
+        "            tags.append(obj[0])\n",
+        "        else:\n",
+        "            keys_values.append((obj[1], obj[2]))\n",
+        "print(keys_values)\n",
         "print('tags:')\n",
         "for tag in tags:\n",
-        "    print(tag[0])\n",
+        "    print(tag)\n",
         "\n",
         "d = {}\n",
-        "for line in keys_values:\n",
-        "    for pairs in line:\n",
-        "        if pairs[0] in d:\n",
-        "            d[pairs[0]].append(pairs[1])\n",
-        "        else:\n",
-        "            d[pairs[0]] = [pairs[1]]\n",
+        "for pair in keys_values:\n",
+        "    if pair[0] in d:\n",
+        "        d[pair[0]].append(pair[1])\n",
+        "    else:\n",
+        "        d[pair[0]] = [pair[1]]\n",
         "\n",
         "print(\"\")\n",
         "print('keys:')\n",
@@ -331,12 +334,13 @@
         "for values in d.values():\n",
         "    print(\"; \".join(values))"
       ],
-      "execution_count": 67,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[('class', 'client-nojs'), ('lang', 'en'), ('dir', 'ltr'), ('class', 'infobox biota'), ('style', 'text-align: left; width: 200px; font-size: 100%')]\n",
             "tags:\n",
             "html\n",
             "table\n",
